django courser 9 commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
+<html lang="ko">
+{% include 'head.html' %}
 <body>
-    Hello World!
+    {% include 'header.html' %}
+
+    {% block content %}}
+
+    {% endblock %}
+
+    {% include 'footer.html' %}
 </body>
 </html>
+
