django courser 9 commit

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block %}
+{% block content %}
 
     <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
         <h1>
@@ -8,4 +8,4 @@
         </h1>
     </div>
 
-{% endblock  %}
+{% endblock %}
