--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,11 @@
-    <div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-
+    <div>
+       <div>
+            <h1>Prgmatic</h1>
+       </div>
+        <div>
+            <span>nav1</span>
+            <span>nav2</span>
+            <span>nav3</span>
+            <span>nav4</span>
+        </div>
     </div>
