--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,19 +2,25 @@
 
 {% block content %}
 
-    <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-        <h1>
-            testing
+    <div style="border-radius: 1rem; margin: 2rem; text-align: center">
+        <h1 style="font-family: 'Lobster', cursive;">
+            Hello World LIST!
         </h1>
 
-        <form action="/account/hello_world/" method="post"> <!--이 주소로 요청을 보낸다-->
+        <form action="/account/hello_world/" method="post">
             {% csrf_token %}
+            <div>
+                <input type="text" name="hello_world_input">
+            </div>
             <input type="submit" class="btn btn-primary" value="POST">
         </form>
 
+        {% if hello_world_output %}
         <h1>
-            {{ text }}
+            {{ hello_world_output.text }}
         </h1>
+        {% endif %}
+
 
     </div>
 
