--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
 
-  <div style="text-align : center">
+  <div style="text-align : center; max-width: 500px; margin: 4rem auto;">>
+    <div class="mb-4"> <!-- margin bottom 해서 4배 -->
+      <h4>SignUp</h4>
+    </div>
     <form action="{% url 'accountapp:create' %}" method="post">  <!--url 일원화, post 방식 으로 전송 -->
       {% csrf_token %}  <!-- csrf_token 은 항상 들어 가야 하는 것 -->
-      {{ form }}  <!-- 우리가 원하는 모든 form 을 html 로 만들어 준다. -->
-      <input type="submit" class="btn btn-primary">
+      {% bootstrap_form form %}
+      <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
     </form>
   </div>
 
