--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="ko">
 {% include 'head.html' %}
-<body>
+
+<body style="font-family:'NanumSquareR';">
     {% include 'header.html' %}
 
     <hr>
