--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -7,7 +7,7 @@
     <div class="mb-4"> <!-- margin bottom 해서 4배 -->
       <h4>Chang Info</h4>
     </div>
-    <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">  <!--url 일원화, post 방식 으로 전송 -->
+    <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">  <!--url 일원화, post 방식 으로 전송 -->
       {% csrf_token %}  <!-- csrf_token 은 항상 들어 가야 하는 것 -->
       {% bootstrap_form form %}
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
