--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,9 +8,17 @@
         {{ target_user.date_joined }}
       </p>
 
+      <img src="{{ target_user.profile.image.url }}" alt=""
+           style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem;">
+
       {% if target_user.profile %} <!--target_user 의 profile 이 존재한다면 -->
       <h2 style="font-family: 'NanumSquareB'">
         {{ target_user.profile.nickname }}  <!--target_user 의 profile 의 nickname 보여주도록-->
+        <!--추가한 부분-->
+        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+          edit
+        </a>
+        <!------------>
       </h2>
       {% else %} <!-- 아닌경우 create profile 로 향하는 url 로 -->
       <a href="{% url 'profileapp:create' %}">   <!--프로필을 만들수 있는 페이지로-->
@@ -19,6 +27,10 @@
         </h2>
       </a>
       {% endif %}
+
+      <h5 style="margin-bottom: 3rem;">
+        {{ target_user.profile.message }}
+      </h5>
 
       {% if target_user == user %}
       <a href="{% url 'accountapp:update' pk=user.pk%}">
