--- a/profileapp/templates/profileapp/update.html
+++ b/profileapp/templates/profileapp/update.html
@@ -5,10 +5,11 @@
 
   <div style="text-align : center; max-width: 500px; margin: 4rem auto;">>
     <div class="mb-4"> <!-- margin bottom 해서 4배 -->
-      <h4>Change Info</h4>
+      <h4>Update Profile</h4>
     </div>
-    <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">  <!--url 일원화, post 방식 으로 전송 -->
-      {% csrf_token %}  <!-- csrf_token 은 항상 들어 가야 하는 것 -->
+    <!--profileapp 으로 정보 요청 -->
+    <form action="{% url 'profileapp:update' pk=target_profile.pk %}" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
       {% bootstrap_form form %}
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
     </form>
