django course 39 commit

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -25,7 +25,7 @@
       </p>
 
       <!-- 인증 과정 포함-->
-      {% if target_article.writer == user %}
+      {% if not target_article.writer == user %}
       <!-- 게시글 업데이트-->
       <a href="{% url 'articleapp:update' pk=target_article.pk %}"
       class="btn btn-primary rounded-pii col-3">
