--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -10,7 +10,7 @@
       {% if target_user.profile %} <!--(1) profile 있고 -->
       <!--프로필 이미지를 보여주기-->
       <img src="{{ target_user.profile.image.url }}" alt=""
-           style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem;">
+           style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object-fit: cover;">
       <h2 style="font-family: 'NanumSquareB'">
         <!--nickname 보여주기-->
         {{ target_user.profile.nickname }}
