--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -2,53 +2,54 @@
 
 {% block content %}
 
-  <div>
-    <div style="text-align: center; max-width: 700px; margin: 4rem auto;">
+<div>
+  <div style="text-align: center; max-width: 700px; margin: 4rem auto;">
 
-      <!--게시글의 제목-->
-      <h1>
-        {{ target_article.title }}
-      </h1>
-      <!-- 닉네임 표시 -->
-      <h5>
-        {{ target_article.writer.profile.nickname }}
-      </h5>
-      <hr>
+    <!--게시글의 제목-->
+    <h1>
+      {{ target_article.title }}
+    </h1>
+    <!-- 닉네임 표시 -->
+    <h5>
+      {{ target_article.writer.profile.nickname }}
+    </h5>
+    <hr>
 
-      <!--게시글의 이미지-->
-      <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
-              src=" {{ target_article.image.url }}" alt="">
+    <!--게시글의 이미지-->
+    <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
+            src=" {{ target_article.image.url }}" alt="">
 
-      <!-- 게시글의 내용 -->
+    <!-- 게시글의 내용 -->
+    <div style="text-align: left;">
       <p>
-        {{ target_article.content }}
+        {{ target_article.content | safe}}
       </p>
-
-      <!-- 인증 과정 포함-->
-      {% if not target_article.writer == user %}
-      <!-- 게시글 업데이트-->
-      <a href="{% url 'articleapp:update' pk=target_article.pk %}"
-      class="btn btn-primary rounded-pii col-3">
-        Update
-      </a>
-
-      <!-- 게시글 삭제 -->
-      <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
-      class="btn btn-danger rounded-pii col-3">
-        Delete
-      </a>
-      {% endif %}
-      <hr> <!-- 밑에 코멘트가 들어갈 공간 분리-->
-
-      {% for comment in target_article.comment.all %}
-        {% include 'commentapp/detail.html' with comment=comment %}
-      {% endfor %}
-
-      <!-- 댓글 생성창 연결해주는 부분 -->
-      {% include 'commentapp/create.html' with article=target_article %}
-
-
     </div>
+
+
+    <!-- 인증 과정 포함-->
+    {% if target_article.writer == user %}
+    <!-- 게시글 업데이트-->
+    <a href="{% url 'articleapp:update' pk=target_article.pk %}"
+    class="btn btn-primary rounded-pill col-3 mt-3">
+      Update
+    </a>
+    <!-- 게시글 삭제 -->
+    <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
+    class="btn btn-danger rounded-pill col-3 mt-3">
+      Delete
+    </a>
+    {% endif %}
+
+    <hr> <!-- 밑에 코멘트가 들어갈 공간 분리-->
+
+    {% for comment in target_article.comment.all %}
+      {% include 'commentapp/detail.html' with comment=comment %}
+    {% endfor %}
+
+    <!-- 댓글 생성창 연결해주는 부분 -->
+    {% include 'commentapp/create.html' with article=target_article %}
   </div>
+</div>
 
 {% endblock %}
